--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,3 +6,10 @@
 .nav-auth {
 	margin-left: auto;
 }
+
+em {
+	background: #ff0 !important;
+	color: #000 !important;
+	font-style: normal;
+	font-weight: 700;
+}
