--- a/src/app/pages/advanced-search/advanced-search.component.html
+++ b/src/app/pages/advanced-search/advanced-search.component.html
@@ -1,1 +1,22 @@
-<p>advanced-search works!</p>
+<form class="example-form">
+    <mat-icon>search</mat-icon>
+    <mat-form-field class="example-full-width" appearance="fill">
+        <mat-label>Search by tags</mat-label>
+        <input type="text" matInput [formControl]="myControl" [matAutocomplete]="auto">
+        <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+            <mat-option *ngFor="let option of filteredOptions$ | async" [value]="option">
+                {{option.name}}
+            </mat-option>
+        </mat-autocomplete>
+    </mat-form-field>
+    <button mat-raised-button color="accent" aria-label="Search">
+        <mat-icon>search</mat-icon>Поиск...
+    </button>
+</form>
+
+<mat-form-field appearance="fill">
+    <mat-label>Toppings</mat-label>
+    <mat-select [formControl]="toppings" multiple>
+        <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}</mat-option>
+    </mat-select>
+</mat-form-field>
