--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,10 +19,15 @@ $angular-test-clone-news-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$angular-test-clone-news-theme: mat.define-light-theme((color: (primary: $angular-test-clone-news-primary,
-				accent: $angular-test-clone-news-accent,
-				warn: $angular-test-clone-news-warn,
-			)));
+$angular-test-clone-news-theme: mat.define-light-theme(
+    (
+        color: (
+            primary: $angular-test-clone-news-primary,
+            accent: $angular-test-clone-news-accent,
+            warn: $angular-test-clone-news-warn,
+        ),
+    )
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -30,27 +35,28 @@ $angular-test-clone-news-theme: mat.define-light-theme((color: (primary: $angula
 @include mat.all-component-themes($angular-test-clone-news-theme);
 
 * {
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 html {
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-	font-size: 14px;
-	color: #333;
-	box-sizing: border-box;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
+        'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+    font-size: 14px;
+    color: #333;
+    box-sizing: border-box;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 html,
 body {
-	height: 100%;
+    height: 100%;
 }
 
 body {
-	font-family: Roboto, sans-serif;
+    font-family: Roboto, sans-serif;
 }
 
 ul,
@@ -59,58 +65,58 @@ ul ul,
 ol ol,
 ul ol,
 ol ul {
-	padding: 0;
-	margin: 0;
-	list-style: none;
+    padding: 0;
+    margin: 0;
+    list-style: none;
 }
 
 .header,
 .nav {
-	display: flex;
-	align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .header {
-	min-height: 24px;
-	padding-right: 12px;
-	background-color: #ff6600;
+    min-height: 24px;
+    padding-right: 12px;
+    background-color: #ff6600;
 }
 
 .nav {
-	a {
-		text-decoration: none;
-		color: #000;
+    a {
+        text-decoration: none;
+        color: #000;
 
-		+a {
-			padding-left: 4px;
-		}
+        + a {
+            padding-left: 4px;
+        }
 
-		&.active,
-		&:hover {
-			color: #fff;
-			transition: all .2s linear;
-		}
-	}
+        &.active,
+        &:hover {
+            color: #fff;
+            transition: all 0.2s linear;
+        }
+    }
 }
 
 .header,
 .main {
-	padding: 4px;
+    padding: 4px;
 }
 
 .main,
 .footer {
-	background-color: #f6f6ef;
+    background-color: #f6f6ef;
 }
 
 .main {
-	padding-bottom: 8px;
+    padding-bottom: 8px;
 }
 
 .footer {
-	display: flex;
-	justify-content: center;
-	min-height: 52px;
-	border-top: 2px solid #ff6600;
-	padding: 16px 4px;
+    display: flex;
+    justify-content: center;
+    min-height: 52px;
+    border-top: 2px solid #ff6600;
+    padding: 16px 4px;
 }
