--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,4 +1,6 @@
 <div class="logo-container">
-	<img src="https://via.placeholder.com/20" width="20" height='20' [alt]="siteName" />
-	<strong>{{siteName}}</strong>
+	<a routerLink="/">
+		<img src="https://via.placeholder.com/20" width="20" height='20' [alt]="siteName" />
+		<strong>{{siteName}}</strong>
+	</a>
 </div>
