--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -1,11 +1,16 @@
+.logo-container,
+.logo-container a {
+    display: flex;
+    align-items: center;
+}
+
 .logo-container {
-	display: flex;
-	align-items: center;
+    a {
+        text-decoration: none;
+        color: #000;
+    }
+    strong {
+        padding: 4px;
+        padding-right: 12px;
+    }
 }
-
-.logo-container strong {
-	padding: 4px;
-	padding-right: 12px;
-}
-
-
