--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,14 @@
 <div class="page">
 	<header class="header">
 		<app-header></app-header>
-		<app-navbar></app-navbar>
-		<nav class="nav nav-auth">
-			<a target="_self" mat-flat-button color="primary" routerLink="/{{isValidUser ? 'logout' : 'login'}}">
-				{{isValidUser ? 'logout' : 'login' }}
-			</a>
-		</nav>
+		<ng-container *ngIf="isValidUser$">
+			<app-navbar></app-navbar>
+			<nav class="nav nav-auth">
+				<a target="_self" mat-button color="primary" routerLink="/welcome" (click)="onLogout()">
+					logout
+				</a>
+			</nav>
+		</ng-container>
 	</header>
 	<main class="main">
 		<router-outlet></router-outlet>
