--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="page">
 	<header class="header">
-		<app-header></app-header>
-		<ng-container *ngIf="isValidUser$">
+		<app-logo></app-logo>
+		<ng-container *ngIf="isValidUser$ | async">
 			<app-navbar></app-navbar>
 			<nav class="nav nav-auth">
 				<a target="_self" mat-button color="primary" routerLink="/welcome" (click)="onLogout()">
