draft version: dirty and  not stable , needs to fix some problems

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
 		</ng-container>
 	</header>
 	<main class="main">
+		<app-advanced-search></app-advanced-search>
 		<router-outlet></router-outlet>
 	</main>
 	<footer class="footer">
